# tokyo-harness

./: .gitignore  .npmignore  AGENTS.md  LICENSE  README.md  eslint.config.js  install.sh  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.playwright-output/: page-2026-06-18T12-44-18-623Z.yml  page-2026-06-18T12-44-29-492Z.yml
agents/: architect.md  critic.md  explore.md  planner.md  reviewer.md
extension/: config.ts  index.ts  tokyo-config.ts
extension/state/: index.ts  schema.ts  session.ts  writer.test.ts  writer.ts
extension/team/: agents.ts  coordination-logic.test.ts  coordination-logic.ts  coordination.ts  hyperplan-members.ts  ids.ts  interview.ts  memory.ts  models.ts  notepad.ts  orchestrator-client.ts  state-tools.ts  team-tools.ts  tier0.test.ts  tools.ts
extension/workflow/: ambiguity.test.ts  ambiguity.ts  continuation.test.ts  continuation.ts  gates.ts  goals.test.ts  goals.ts  index.ts  phases.ts  settings.ts  workflow.test.ts
orchestrator/: Cargo.toml
orchestrator/src/: fallback.rs  hyperplan.rs  ipc.rs  lib.rs  main.rs  orchestrator.rs  rpc.rs  snapshot.rs  team.rs  tmux_worker.rs  tui.rs  worker.rs  worktree.rs
orchestrator/tests/: integration.rs  mock-pi.mjs
skills/execute/: SKILL.md
skills/hyperplan/: SKILL.md
skills/interview/: SKILL.md
skills/plan/: SKILL.md
skills/verify/: SKILL.md
