[package]
name = "tokyo-orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tokyo"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
dirs = "6"
ratatui = "0.29"
crossterm = "0.28"
libc = "0.2"
